# TriEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  VendorsPreCompile.py
Src/APIs/GLFW/: GLFW.hpp  GLFW_EventsReceiver.cpp  GLFW_EventsReceiver.hpp  GLFW_InputHandler.cpp  GLFW_InputHandler.hpp  GLFW_Window.cpp  GLFW_Window.hpp
Src/APIs/ImGui/GLFW/: GLFW_ImGui_KeyCode.cpp  GLFW_ImGui_KeyCode.hpp
Src/APIs/OpenGL/: GL_Buffers.cpp  GL_Buffers.hpp  GL_Context.cpp  GL_Context.hpp  GL_Debug.cpp  GL_Debug.hpp  GL_FrameBuffer.cpp  GL_FrameBuffer.hpp  GL_Renderer.cpp  GL_Renderer.hpp  GL_Shader.cpp  GL_Shader.hpp  GL_SystemInfo.cpp  GL_SystemInfo.hpp  GL_Texture2D.cpp  GL_Texture2D.hpp  GL_VertexArray.cpp  GL_VertexArray.hpp  OpenGL.hpp
Src/APIs/SDL/: SDL_Window.cpp  SDL_Window.hpp
Src/Camera/: MainCamera.cpp  MainCamera.hpp
Src/Core/: Asserts.hpp  Base.hpp  Instrument.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logs.cpp  Logs.hpp  Timer.hpp  TypeDef.hpp  Window.cpp  Window.hpp
Src/Events/: Events.hpp  EventsReceiver.cpp  EventsReceiver.hpp  InputHandler.cpp  InputHandler.hpp  KeyboardEvents.hpp  MouseEvents.hpp  WindowEvents.hpp
Src/Renderer/: BatchRenderer2D.cpp  BatchRenderer2D.hpp  Buffers.cpp  Buffers.hpp  Camera.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Context.cpp  Context.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Shaders.cpp  Shaders.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp
Src/UI/: UI.cpp  UI.hpp
Vendors/glad/: CMakeLists.txt
Vendors/glad/include/glad/: glad.h
Vendors/glad/src/: glad.c
Vendors/stb_image/: CMakeLists.txt
